# ejdict-rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
crates/cli/: Cargo.toml  README.md
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
ejdict_rs/: Cargo.toml
ejdict_rs/src/: lib.rs
ejdict_rs_cli/: Cargo.toml
ejdict_rs_cli/src/: main.rs
ejdict_rs_core/: Cargo.toml
ejdict_rs_core/src/: lib.rs
src/: errors.rs  lib.rs
