[package]
name = "ejdict_rs_cli"
version = "0.0.1"
authors = ["tomo3110 <uotias64_mole@yahoo.co.jp>"]
edition = "2018"
description = "ejdict-cli is English-Japanese Dictionary command."

[[bin]]
name = "ejdict-cli"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
ejdict_rs = { path = "../../" }
prettytable-rs = "0.8"
serde_json = "1"