[package]
name = "ejdict_rs_cli"
version = "0.0.1"
authors = ["tomo3110 <uotias64_mole@yahoo.co.jp>"]
description = "ejdict-cli is English-Japanese Dictionary command."
repository = "https://github.com/tomo3110/ejdict_rs"
readme = "README.md"
license = "MIT"
edition = "2018"

[[bin]]
name = "ejdict-cli"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
ejdict_rs = { version = "0.0.1", path = "../../" }
prettytable-rs = "0.8"
serde_json = "1"