[package]
name = "ejdict_rs_core"
version = "0.0.3"
authors = ["tomo3110 <uotias64_mole@yahoo.co.jp>"]
description = "This library is detailed implementation of ejdict-rs."
repository = "https://github.com/tomo3110/ejdict-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
failure = "0.1"
serde = { version = "1", features = ["derive"] }
